--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,6 +33,14 @@
     @apply text-gray-900 font-semibold;
 }
 
+.mobile-nav-link {
+    @apply hover:bg-gray-50 hover:border-gray-300 hover:text-gray-700;
+}
+
+.mobile-nav-link.mobile-active {
+    @apply bg-blue-50 border-blue-500 text-blue-700;
+}
+
 input:not([type="checkbox"]):focus,
 textarea:focus,
 select:focus {
